--- a/vista/kumite.html
+++ b/vista/kumite.html
@@ -1,7 +1,7 @@
 <div class="container body">
 
 		<div class="row">
-			<img src="Encabezado-Karate.png" class="img-fluid justify-content-center p-auto m-auto" alt="Responsive image" >
+			<img src="./imagenes/Encabezado-Karate.png" class="img-fluid justify-content-center p-auto m-auto" alt="Responsive image" >
 		</div>
 		<div class="row p-4  ">
 			<div class="col bordes panel">
